<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WorkIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">hello blank fragment</string>
    <string name="register">Register</string>
    <string name="please_fill_free_to_create_your_first_account_on_workin">please fill free to create your first account on WorkIn</string>
    <string name="name">Name</string>
    <string name="forgotten_password"><u>forgotten password?</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_in_easy_and_scure_way_by_biometeric_login_that_will_be_added_later">Login in Easy and scure way by biometeric Login that will be added later</string>
    <string name="reset">Reset</string>
    <string name="error_login_custom_token" translatable="false">The custom token format is incorrect. Please check the documentation.</string>
    <string name="error_login_custom_token_mismatch" translatable="false">The custom token corresponds to a different audience.</string>
    <string name="error_login_credential_malformed_or_expired" translatable="false">Seems to be error in password or email</string>
    <string name="error_login_invalid_email" translatable="false">The email address is badly formatted.</string>
    <string name="error_login_wrong_password">wrong password</string>
    <string name="error_login_user_mismatch" translatable="false">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="error_login_requires_recent_login" translatable="false">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="error_login_accounts_exits_with_different_credential" translatable="false">An account already exists with the same email address but different sign-in credentials.</string>
    <string name="error_login_email_already_in_use" translatable="false">The email address is already in use by another account.</string>
    <string name="error_login_credential_already_in_use" translatable="false">This credential is already associated with a different user account.</string>
    <string name="error_login_user_disabled" translatable="false">The user account has been disabled by an administrator.</string>
    <string name="error_login_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_login_operation_not_allowed" translatable="false">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_login_password_is_weak" translatable="false">The given password is invalid.</string>
    <string name="error_login_user_token_expired" translatable="false">The user\'s credential is no longer valid. The user must sign in again</string>
    <string name="error_login_invalid_user_token" translatable="false">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="network_excep">you have network issue, seems to be offline</string>
    <string name="email_verification">Email Verification</string>
    <string name="check_mail_box_to_verify_email_and_sign_in_with_you_email">Check mail box to verify email and sign in with you email</string>
    <string name="title_activity_main_app" translatable="false">MainAppActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="essentials">Essentials</string>
    <string name="select_an_appropriate_photo_for_you_from_your_gallery_prefered_to_be_formal_and_white_back_ground">Select an appropriate photo for you from your gallery, prefered to be formal and white back ground</string>
    <string name="pick_one">Pick one</string>
    <string name="skip">Skip</string>
    <string name="pick_your_category_from_the_below_list_according_to_your_current_education_and_career_path_make_sure_that_this_category_appropriate_for_you">Pick your category from the below list according to your current education and career path, make sure that this category Appropriate for you</string>
    <string name="student">Student</string>
    <string name="students">Students</string>
    <string name="talented">Talanted</string>
    <string name="developer">Developer</string>
    <string name="manager">Manager</string>
    <string name="explorer">Explorer</string>
    <string name="this_category_is_for_student_who_want_to_know_about_each_feid_and_seak_to_collect_scientific_knowledge_and_researches_this_focuses_on_gain_experience_not_much_in_work_and_earn_money">This category is for student who want to know about each field and seek to collect scientific knowledge and researches, this focuses on gain experience not much in work and earn money</string>
    <string name="talented_phrase">this category is concerned for talanted and skilled youth, whom search for compititions and skills improvment in there frame work,this category is not intersted in job hire to much</string>
    <string name="developer_phrase">"this category is for developer whom searching for new oppotunity in company and new roles in life and imporve thier carear path , discover new technology and follow newly added articles\n "</string>
    <string name="manager_phrase">"this category for manager and team leaders, whom search mew condidates, analytic team work , preview current status and analytic for newly added projects "</string>
    <string name="explorer_phrase">this category for peaple joining workIn for first time , need to get idea about every thing in platform and then decide a new way or path in the plarform\n</string>
    <string name="profile">Profile</string>
    <string name="simple_bio">Iam computer science, Bioinformatics department graduate 2023, I learned by joining courses and start making apps in android for about 3 years and half since 2020,I have demonstrated expertise in Java and Kotlin. Skilled in Machine Learning, Deep Neural Networks, Cloud Computing, Cloud Database, Database Design, and Graphs and Algorithms. Strongly committed to developing high-quality mobile applications that leverage cutting-edge technologies. Proven ability to optimize performance and functionality through the implementation of AI and database solutions. A valuable asset to any organization looking to deliver innovative mobile solutions.</string>
    <string name="resume"><u>resume</u></string>
    <string name="hello_to_workin">Hello to WorkIn</string>
    <string name="initial_title_home_fragment">First we are WorkIn, platfrom for hiring and job search , freelancing , learning and some other stuff \n this awsome platfrom is developed by awsome engeneer named by Mr Moataz, and he is so exited to see you are 🤩</string>
    <string name="seems_to_be_your_first_visit_to_workin_welcome_mr_there_some_setps_need_to_be_taken_for_continue">seems to be your first visit to WorkIn, Welcome Mr , there some setps need to be taken for continue</string>
    <string name="descibe_your_self_below_or_in_anther_words_give_as_a_summary_about_you">Descibe your self below, or in anther words, give as a summary about you</string>
    <string name="who_are_you">who are You?!</string>
    <string name="summary">Summary</string>
    <string name="sub_title">Sub title</string>
    <string name="write_you_phone_number_in_the_text_below">write you phone number in the text below</string>
    <string name="verify_number">Verify Number</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="just_select_your_birthday">Just Select your birthDay</string>
    <string name="birthday">BirthDay</string>
</resources>