<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.workin.presentation.posts.PostsFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.workin.presentation.invitations.InvitationFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/profilePageFragment2"
        android:name="com.example.workin.presentation.Profile.ui.ProfilePageFragment"
        android:label="@string/profile" >
        <action
            android:id="@+id/action_profilePageFragment2_to_editHeadFragment"
            app:destination="@id/editHeadFragment"
            app:enterAnim="@anim/enter_right"
            app:exitAnim="@android:anim/fade_out"
            app:popExitAnim="@android:anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/editHeadFragment"
        android:name="com.example.workin.presentation.Profile.ui.EditHeadFragment"
        android:label="edit head"
        tools:layout="@layout/fragment_edit_head" />
    <fragment
        android:id="@+id/availableJobsFragment"
        android:name="com.example.workin.presentation.JobsManager.AvailableJobsFragment"
        android:label="fragment_available_jobs"
        tools:layout="@layout/fragment_available_jobs" />
    <fragment
        android:id="@+id/chatListFragment"
        android:name="com.example.workin.presentation.chat.ui.ChatListFragment"
        android:label="fragment_chat_list"
        tools:layout="@layout/fragment_chat_list" />
</navigation>